chore: add dev optional dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ classifiers = [
 dependencies = [
     "numpy",
 ]
+[project.optional-dependencies]
+dev = [
+    "mypy",
+    "ruff"
+]
 
 [project.urls]
 Homepage = "https://github.com/maximecharriere/gxipy"
