--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
-name = "iai-gxipy"
-version = "2.0.2407.9061"
+name = "pygxi"
+version = "0.1.0"
 authors = [
-    {name = "Daheng Imaging"}
+    {name = "Jacopo Abramo"}
 ]
-description = "Python API to use with the Daheng Imaging Galaxy SDK"
+description = "Python bindings for the Daheng Imaging Galaxy SDK"
 readme = "README.md"
 license = {text = "MIT"}
-requires-python = ">=3.0"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -20,11 +20,24 @@ classifiers = [
 dependencies = [
     "numpy",
 ]
+
 [project.optional-dependencies]
 dev = [
     "mypy",
-    "ruff"
+    "ruff",
+    "pytest",
+    "pytest-cov"
 ]
 
 [project.urls]
 Homepage = "https://github.com/maximecharriere/gxipy"
+
+[tool.hatch.build]
+packages = ["src/gxipy"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+markers = [
+    "device_required: marks tests that require a physical camera device (deselect with '-m \"not device_required\"')"
+]
